Changelog
=========

Collage 1.2.0 trunk (unreleased)
--------------------------------

https://svn.plone.org/collective/Products.Collage/trunk/

* Use `folder_summary_view` instead of `folder_listing` in topic
  views. This fixes issue #43.
  [malthe]

* Added Alias target search limit in config panel.
  [glenfant]

* Optimizations of existing items view including link to target.
  [glenfant]

* Removed code for old Plone (< 3.1) support since we can't be used in
  Plone 3.0 or older anymore
  [glenfant]

* Memoizing where possible to speed up views (not sure to be exhaustive)
  [glenfant]

* New translations due to the control panel, and added translations synch
  script.
  [glenfant]

* Fixed bug on @@collage_helper
  [glenfant]

* Added control panel for Collage inner content types whitelist.
  [glenfant]

* Collage is now LinguaPlone compatible and therefore Collage elements
  are now translatable.
  [erral]

* Renderer: if a layout is defined on a canonical object, but not
  on a translation, now the canonical version's layout setting
  is used for the translation rather than the default. (Language
  versions should look the same unless explicitly defined otherwise.)
  [thomasw]

* Added Basque (eu) and Spanish (es) translations.
  [erral]

* Added safety belt to GenericSetup upgrade scripts.
  [glenfant]

* Added translation entries for new boolean in Collage.
  [glenfant]

* Collage subcontents indexing is now an option, since a Collage
  object may be irrelevant in search results (i.e: a Collage with
  only File contents).
  [glenfant]

* Added utilities.getFSVersionTuple that may help Collage extension
  components (add skins, content type support, ...)
  [glenfant]

* version.txt is major.minor.bugfix-[beta] to get synch with
  metadata.xml/version (when upgrade step required) and complying
  getFSVersionTuple above
  [glenfant]

* Add missing event-related translation.
  [kdeldycke]

Collage 1.2.0 beta 3 (2008-08-15)
---------------------------------
