@@ -6,8 +6,8 @@ The Collage product was built to be easily customizable.
 Content views
 -------------
 
-New content views can be added by registering a browser view with
-a browser:page-directive. Examples of this can be found in::
+New content views can be added by registering a browser view with a
+browser:page-directive. Examples of this can be found in::
 
   ./browser/views.zcml
 
@@ -22,8 +22,8 @@ A view for a standard document can be registered as follows::
      layer="Products.Collage.interfaces.ICollageBrowserLayer"
      />
 
-To display a human-readable title, we associate the view with the
-following class, placed in a file document.py:::
+To display a human-readable title, we associate the view with the following
+class, placed in a file document.py:::
 
   from Products.Five.browser import BrowserView
 
@@ -38,8 +38,8 @@ New skins views can be added by registering a named utility in::
 
   MySkin/browser/skins.zcml
 
-For example, a skin "Alert" for the view "my-view" can be registered
-as follows::
+For example, a skin "Alert" for the view "my-view" can be registered as
+follows::
 
   <utility
      name="collage-my-view-alert"
@@ -47,8 +47,8 @@ as follows::
      factory=".skins.PortletSkin03"
   />
 
-To display a human-readable title, we associate the utility with the
-following class, placed in a skins.py::
+To display a human-readable title, we associate the utility with the following
+class, placed in a skins.py::
 
     from Products.MySkin import MyMessageFactory as _
 
@@ -61,15 +61,15 @@ Add IAlertSkin in MySkin/interfaces.py::
     class IAlertSkin(interface.Interface):
 	 """Interface for alert skins views."""
 
-To associate this skin to a view, you must add the interfaces
-implemented by the skin::
+To associate this skin to a view, you must add the interfaces implemented by the
+skin::
 
   class MyDocumentView(BrowserView):
       title = u'My view'
       skinInterfaces = (IAlertSkin,)
 
-Note that you don't need this above stuff for portlets views
-that are already skinnable.
+Note that you don't need this above stuff for portlets views that are already
+skinnable.
 
 Finally, add your CSS rules in a stylesheet::
 
@@ -78,15 +78,18 @@ Finally, add your CSS rules in a stylesheet::
 
   }
 
-Note that if you are using "Merge CSS composition" of CSS registry,
-your stylesheet must be after "collage.css" and use the same condition
-as the former::
+Note that if you are using "Merge CSS composition" of CSS registry, your
+stylesheet must be after "collage.css" and use the same condition as the
+former::
 
   object/@@collage|nothing
+
+Products.Collage provides a minimal skinning demo. See the ``skindemo`` folder
+(start with ``skindemo/README.txt`` as usual).
 
 
 Content controls
 ----------------
 
-Content controls are registered as viewlets. See
-./browser/viewlets.zcml for examples.
+Content controls are registered as viewlets. See ./browser/viewlets.zcml for
+examples.
